--- a/index.html
+++ b/index.html
@@ -19,6 +19,10 @@
 
 					<!-- Logo -->
 						<h1><a href="index.html" id="logo">Arcana <em>by HTML5 UP</em></a></h1>
+						<h1>This is dummy616</h1>
+						<p>Welcome stranger!</p>
+						<a rel="license" href="http://creativecommons.org/licenses/by/3.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by/3.0/88x31.png" /></a><br />Thanks to HTML 5 UP. This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/3.0/">Creative Commons Attribution 3.0 Unported License</a>.<br />
+						<a href="https://html5up.net/">HTML 5UP</a>
 
 					<!-- Nav -->
 						<nav id="nav">
