--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 					<nav>
 						<ul>
 							<li><a href="#intro">Welcome</a></li>
-							<li><a href="/elements.hhtml">Elemente</a></li>
+							<li><a href="/elements.html">Elemente</a></li>
 							<li><a href="/generic.html">Einzelne Seite</a></li>
 							<li><a href="#one">Who we are</a></li>
 							<li><a href="#two">What we do</a></li>
